--- a/Mueossa/pom.xml
+++ b/Mueossa/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.smhrd</groupId>
-	<artifactId>Mueossa</artifactId>
+	<groupId>com.mueossa</groupId>
+	<artifactId>mueossa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Mueossa</name>
+	<name>mueossa</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -52,6 +52,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
