--- a/Mueossa/src/main/resources/application.properties
+++ b/Mueossa/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+# springboot name
 spring.application.name=Mueossa
 
+# context-root 설정
+# server.servlet.context-path=/mueossa
+
 # port번호 설정
-server.port=8090
+server.port=8092
 
 # post 방식 인코딩 설정
 server.servlet.encoding.charset=UTF-8
@@ -10,21 +14,22 @@ server.servlet.encoding.enabled=true
 
 # DB 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3307/mueossa
-spring.datasource.username=mueossa
+spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3307/nueossa
+spring.datasource.username=nueossa
 spring.datasource.password=12345
-
-# MySQL 8버전을 쓰고 있음을 명시
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=update
+
+# MySQL 8버전을 쓰고 있음을 명시
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Thymeleaf 설정
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
 
 # 필수 아님
 # SQL문을 콘솔창에 보이게 하기
