--- a/Mueossa/src/main/resources/application.properties
+++ b/Mueossa/src/main/resources/application.properties
@@ -14,8 +14,8 @@ server.servlet.encoding.enabled=true
 
 # DB 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3307/nueossa
-spring.datasource.username=nueossa
+spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3307/mueossa
+spring.datasource.username=mueossa
 spring.datasource.password=12345
 
 # JPA 설정
