--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,13 @@ spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3307/mueossa
 spring.datasource.username=mueossa
 spring.datasource.password=12345
 
+# DB 설정 (환경변수 사용 시 주석 해제) + MueossaApplication.java에서 Dotenv 주석해제
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=${DB_URL}
+# spring.datasource.username=${DB_USERNAME}
+# spring.datasource.password=${DB_PASSWORD}
+
+
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=update
 
