--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,13 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.18.0</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect -->
 		<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
