--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,15 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 
+# email 설정 (gmail)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=qkrxodud130@gmail.com
+spring.mail.password=hwxtbxnlliohbumv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 # 필수 아님
 # SQL문을 콘솔창에 보이게 하기
 spring.jpa.show-sql=true
