--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,17 +12,11 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
 
-# DB 설정
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3307/mueossa
-spring.datasource.username=mueossa
-spring.datasource.password=12345
-
 # DB 설정 (환경변수 사용 시 주석 해제) + MueossaApplication.java에서 Dotenv 주석해제
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.url=${DB_URL}
-# spring.datasource.username=${DB_USERNAME}
-# spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 
 # JPA 설정
@@ -41,8 +35,8 @@ spring.thymeleaf.enabled=true
 # email 설정 (gmail)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=qkrxodud130@gmail.com
-spring.mail.password=hwxtbxnlliohbumv
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
